# gcp-backup-exercise

./: README.md  pyproject.toml
gcp_backup_exercise/: backup.py  projects.py  scan.py
